fix nav jumps when hovering

--- a/css/main.css
+++ b/css/main.css
@@ -136,18 +136,20 @@ h1 {
 
 .topnav a {
   float: right;
-  color: #9e9e9e;
+  color: #9e9e9e !important;
   display: block;
   text-align: center;
-  padding: 23px 12px;
+  padding: 23px 12px !important;
   font-family: "Futura", sans-serif;
   font-size: 18px;
-  text-decoration: none;
+  text-decoration: none !important;
   margin-right: 2%;
 }
 
 .topnav a:hover {
-  color: #f2f2f2;
+  color: #f2f2f2 !important;
+  background-color: #232323 !important;
+  padding: 23px 12px !important;
 }
 
 #logo {
